# Video-processing

./: AGENTS.md  DOCS_INDEX.md  FILE_HANDLING.md  USAGE_EXAMPLES.md  prefab-manifest.json  pyproject.toml
scripts/: validate_manifest.py
src/: __init__.py  main.py
tests/: test_basic.py  test_integration.py  test_main.py
